<resources>
    <string name="app_name">BaiduMusicDemo</string>
    <string name="authorType">歌手类型</string>
    <string name="login_txt">账号登录</string>
    <string name="login_hint_user">账号</string>
    <string name="login_psw_hint">密码</string>
    <string name="login_bt_tv">登录</string>
    <string name="login_register_bt">快速注册</string>
    <string name="register_text">账号注册</string>
    <string name="register_hint_user">账号</string>
    <string name="register_hint_psw">密码</string>
    <string name="register_bt_tv">注册</string>
    <string name="user_more_text">更多</string>
    <string name="user_login_now_bt">立即登录</string>
    <string name="user_login_desc">登录后,自动为您同步歌曲</string>
    <string name="user_logout_bt">退出登录</string>
    <string name="wifi">仅WiFi联网</string>
    <string name="delay_exit_text">计时关闭</string>
    <string name="welcome_pass_bt">跳过</string>
    <string name="all_author_text">全部歌手</string>
    <string name="type_hot_author_tv">热门歌手</string>
    <string name="type_chn_male">华语男歌手</string>
    <string name="type_chn_female">华语女歌手</string>
    <string name="type_chn_group">华语组合</string>
    <string name="type_eng_male">欧美男歌手</string>
    <string name="type_eng_female">欧美女歌手</string>
    <string name="type_eng_group">欧美组合</string>
    <string name="type_krn_male">韩国男歌手</string>
    <string name="type_krn_female">韩国女歌手</string>
    <string name="type_krn_group">韩国组合</string>
    <string name="type_jpn_male">日本男歌手</string>
    <string name="type_jpn_female">日本女歌手</string>
    <string name="type_jpn_group">日本组合</string>
    <string name="type_other">其他歌手</string>
    <string name="my_favorite_text">我喜欢的单曲</string>
    <string name="local_music_text">本地音乐</string>
    <string name="mine_local_music_text">本地音乐</string>
    <string name="mine_recent_play">最近播放</string>
    <string name="mine_download_manage">下载管理</string>
    <string name="mine_self_list">自建歌单</string>
    <string name="mine_favorite_text">我喜欢的单曲</string>
    <string name="mine_new_list_text">新建歌单</string>
    <string name="mine_collect_list">收藏歌单</string>
    <string name="mine_collect_desc">遇到喜欢的歌单记得收藏呦</string>
    <string name="mv_all">全部</string>
    <string name="mv_new">最新</string>
    <string name="mv_hot">最热</string>
    <string name="radio_more">更多电台分类</string>
    <string name="music_lib_rec_text">歌单推荐</string>
    <string name="music_lib_more">更多</string>
    <string name="search_et_hint">歌曲,歌手,专辑,歌词,伴奏</string>
    <string name="list_all_list">全部歌单</string>
    <string name="recent_text">最近播放</string>
    <string name="like_txt">喜欢</string>
    <string name="download_txt">下载</string>
    <string name="share_txt">分享</string>
    <string name="add_txt">添加</string>
    <string name="playing_list_txt">正在播放列表</string>
    <string name="clear_all_txt">全部清空</string>
    <string name="none_txt">啥都没有!!!!</string>
    <string name="delay_exit_alert_msg">将在0分钟后停止播放音乐并退出</string>
    <string name="_0min">0分钟</string>
    <string name="_120min">120分钟</string>
</resources>
