<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alert_delay_message"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_padding"
        android:text="@string/delay_exit_alert_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/alert_delay_seekbar"
        android:max="24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/common_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_0min"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginEnd="@dimen/common_margin"
            android:text="@string/_120min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>