<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBg"
        android:orientation="horizontal"
        android:padding="@dimen/common_padding">

        <ImageView
            android:id="@+id/user_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_more_text"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/common_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_unlogin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_padding">

        <TextView
            android:id="@+id/user_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_now_tv_bg"
            android:padding="@dimen/common_padding"
            android:text="@string/user_login_now_bt"
            android:textColor="@color/colorBg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:alpha="0.5"
            android:text="@string/user_login_desc" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:src="@mipmap/img_titlebar_login" />

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/user_logout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/common_margin"
            android:alpha="0.7"
            android:padding="@dimen/common_padding"
            android:text="@string/user_logout_bt" />

    </LinearLayout>

    <include layout="@layout/line_view" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_weight="1"
            android:background="@drawable/item_rv_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_margin">

            <ImageView
                android:id="@+id/user_wifi"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/bt_setup_wifi_nor" />

            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/item_rv_bg"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/common_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_delay_exit"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/bt_setup_auto_close_nor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/delay_exit_text"
                android:layout_marginTop="@dimen/common_padding"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>