<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/songmenu_image"
            android:padding="@dimen/common_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/mv_all"
            android:textSize="@dimen/common_text_size"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/common_padding"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/mv_newest_rb"
                android:text="@string/mv_new"
                android:textSize="@dimen/common_text_size"
                android:button="@null"
                android:layout_margin="@dimen/common_padding"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="@dimen/common_margin"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/mv_hotest_rb"
                android:text="@string/mv_hot"
                android:textSize="@dimen/common_text_size"
                android:layout_gravity="center"
                android:button="@null"
                android:layout_margin="@dimen/common_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/mv_replace_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>