<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/pop_detail_space"
        android:alpha="0.3"
        android:background="@color/colarBgNotif"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

    </FrameLayout>

    <TextView
        android:id="@+id/pop_detail_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_padding"
        android:textSize="@dimen/common_text_size" />

    <LinearLayout
        android:background="@color/colorBgWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pop_detail_like_iv"
                android:padding="@dimen/common_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cust_dialog_hart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/common_padding"
                android:text="@string/like_txt" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pop_detail_download_iv"
                android:padding="@dimen/common_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cust_dialog_download" />

            <TextView
                android:id="@+id/pop_detail_download_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/common_padding"
                android:text="@string/download_txt" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pop_detail_share_iv"
                android:padding="@dimen/common_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cust_dialog_more" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/common_padding"
                android:text="@string/share_txt" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pop_detail_add_iv"
                android:padding="@dimen/common_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cust_dialog_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/common_padding"
                android:text="@string/add_txt" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>